# AgenticAI

./: README.md  pyproject.toml
chatbots/: my-alter-ego-evaluate.ipynb  my-alter-ego.ipynb  summary.txt
crew/stock_analyzer/: pyproject.toml
crew/stock_analyzer/output/: investment_advice.md  market_research.md  performance_analysis.md
crew/stock_analyzer/src/stock_analyzer/: crew.py  gradio_app.py  main.py
crew/stock_analyzer/src/stock_analyzer/config/: agents.yaml  tasks.yaml
crew/stock_analyzer/src/stock_analyzer/tools/: custom_tool.py
crew/stock_analyzer_gemini/: README.md  pyproject.toml
crew/stock_analyzer_gemini/output/: investment_advice.md  market_research.md  performance_analysis.md
crew/stock_analyzer_gemini/src/stock_analyzer_gemini/: api.py  crew.py  gradio_app.py  main.py
crew/stock_analyzer_gemini/src/stock_analyzer_gemini/config/: agents.yaml  tasks.yaml
crew/stock_analyzer_gemini/src/stock_analyzer_gemini/tools/: custom_tool.py
multi-agent-communication/: 1_lab2_Kaushik_Parallelization.ipynb
openai-agent-sdk/: agent-workflow-handoff.ipynb  agent-workflow-sales-manager.ipynb  output.html  techy-the-interview-agent.ipynb  websearch.ipynb
openai-agent-sdk/techy-app/: technical_interview_evaluation_report.html  techy.py
