[project]
name = "stock_analyzer_gemini"
version = "0.1.0"
description = "stock_analyzer_gemini using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "yfinance"
]

[project.scripts]
stock_analyzer_gemini = "stock_analyzer_gemini.main:run"
run_crew = "stock_analyzer_gemini.main:run"
train = "stock_analyzer_gemini.main:train"
replay = "stock_analyzer_gemini.main:replay"
test = "stock_analyzer_gemini.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
